/*
 * This build file was auto generated by running the Gradle 'init' task
 * by 'qurt' at '17-5-25 下午8:41' with Gradle 2.4
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at http://gradle.org/docs/2.4/userguide/tutorial_java_projects.html
 */

// Apply the java plugin to add support for Java
apply plugin: 'java'

version = 0.1
sourceCompatibility = 1.8

allprojects {
	repositories {
		maven { url 'https://jitpack.io' }
		maven { url "http://clojars.org/repo" }
	}
}

// In this section you declare where to find the dependencies of your project
repositories {
    // Use 'jcenter' for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

// In this section you declare the dependencies for your production and test code
dependencies {
    // The production code uses the SLF4J logging API at compile time
    compile 'org.slf4j:slf4j-api:1.7.12'

    // Declare the dependency for your favourite test framework you want to use in your tests.
    // TestNG is also supported by the Gradle Test task. Just change the
    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
    // 'test.useTestNG()' to your build script.
    testCompile 'junit:junit:4.12'
    
    
    compile "org.java-websocket:java-websocket:1.3.3"
    compile "com.alibaba:fastjson:1.2.6"
}

task wrapper(type: Wrapper) {
    gradleVersion = '2.4'
}